--- a/inventory-service/pom.xml
+++ b/inventory-service/pom.xml
@@ -58,7 +58,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+                    <imageName>reg.oa.com/wujiechu/${project.artifactId}:1.0.0</imageName>
                     <dockerDirectory>${project.basedir}/src/main/docker</dockerDirectory>
                     <resources>
                         <resource>
